Client layout bug fixed

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,6 +1,5 @@
 .ca-app-container {
   overflow: auto;
-  height: 100%;
 }
 
 .ca-sidenav {
